Added base class for testing with a refit client

--- a/ConnectingApps.TestDemo/ConnectingApps.TestDemo.csproj
+++ b/ConnectingApps.TestDemo/ConnectingApps.TestDemo.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConnectingApps.TestDemo.RefitClient\ConnectingApps.TestDemo.RefitClient.csproj" />
+  </ItemGroup>
+
 
 </Project>
