--- a/ConnectingApps.IntegrationTests.NugetExample/ConnectingApps.IntegrationTests.NugetExample.csproj
+++ b/ConnectingApps.IntegrationTests.NugetExample/ConnectingApps.IntegrationTests.NugetExample.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ConnectingApps.TestEnablers" Version="3.1.1" />
+    <PackageReference Include="ConnectingApps.TestEnablers" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConnectingApps.TestDemo.RefitClient\ConnectingApps.TestDemo.RefitClient.csproj" />
     <ProjectReference Include="..\ConnectingApps.TestDemo\ConnectingApps.TestDemo.csproj" />
   </ItemGroup>
 
