--- a/ConnectingApps.TestEnablers/ConnectingApps.TestEnablers.csproj
+++ b/ConnectingApps.TestEnablers/ConnectingApps.TestEnablers.csproj
@@ -14,7 +14,8 @@
     <PackageDescription>Simplify your .NET Core integration tests by just inheriting from IntegrationTestBase . This library has all the boilerplate code so you can write the scenarios with xUnit.</PackageDescription>
     <RepositoryUrl>https://github.com/ConnectingApps/DncTestDemo</RepositoryUrl>
     <PackageProjectUrl>https://github.com/ConnectingApps/DncTestDemo</PackageProjectUrl>
-    <PackageLicenseExpression>GNU General Public License v3.0</PackageLicenseExpression>
+    <PackageLicenseExpression></PackageLicenseExpression>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.3" />
@@ -24,6 +25,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
